@@ -1,5 +1,6 @@
 2002-08-03	Jakub Skopal	<j@kubs.cz>
 
+ * fixed build for systems which don't have gethostbyaddr_r()
  * changes in jnettop.c to use select() and avoid 100% processor time
    consumption on systems, which support it (Linux)
 
@@ -43,4 +44,4 @@
 
  * initial release
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/ChangeLog,v 1.11 2002-09-03 20:49:00 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/ChangeLog,v 1.12 2002-09-03 21:03:02 merunka Exp $
